# WPSComposer

./: .gitignore  AGENTS.md  README.md  install.ps1  install.py  install.sh  pyproject.toml
.codex-plugin/: plugin.json
.superpowers/sdd/: task-6-report.md
docs/: macos-phase0.md
docs/superpowers/plans/: 2026-07-17-engineering-baseline-remediation.md  2026-07-17-macos-wps-jsapi-feasibility.md  2026-07-18-wps-sandbox-staging-and-office-pdf-conversion.md  2026-07-19-macos-wps-generation-parity.md
docs/superpowers/specs/: 2026-07-16-macos-wps-jsapi-backend-design.md  2026-07-17-engineering-baseline-remediation-design.md  2026-07-17-macos-wps-sandbox-staging-design.md  2026-07-19-macos-wps-capability-parity-design.md
macos/wps-jsapi-probe/: package-lock.json  package.json
macos/wps-jsapi-probe/addin/: bridge-client.js  index.html  manifest.xml  presentation.js  ribbon.xml  spreadsheet.js  writer.js
macos/wps-jsapi-probe/fixtures/: README.md
skills/: __init__.py
skills/WPSComposer/: SKILL.md  __init__.py
tests/: test_artifact_transport.py  test_conversion.py  test_documentation.py  test_generation.py  test_generation_plan.py  test_installer.py  test_markdown_parser.py  test_pdf_composer.py  test_plugin_manifest.py  test_public_api.py  test_recording_composers.py  test_sheet_renderer.py  test_slide_renderer.py  test_windows_conversion.py  test_writer_renderer.py
tests/macos_probe/: __init__.py  test_addin_assets.py  test_bridge.py  test_conversion.py  test_generation.py  test_models.py  test_runner.py  test_runtime.py  test_templates.py
(+38 files in other folders)
